// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch matches snapshot 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
  testID="toggleSwitchTest"
>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontSize": 10,
          "textAlignVertical": "center",
        },
        {
          "color": "#000000",
          "fontFamily": "VoltePlay-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "marginRight": 5,
        },
        {
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <RCTSwitch
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#F3CBE3"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          {
            "height": 20,
          },
        ]
      }
      thumbTintColor="#ffffff"
      tintColor="#C2C2C2"
      value={false}
    />
    <View
      style={
        [
          {
            "borderRadius": 50,
            "borderWidth": 0.5,
            "height": 20,
            "position": "absolute",
            "top": 0,
            "width": 20,
          },
          {
            "borderColor": "#E10092",
            "left": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`ToggleSwitch renders ToggleSwitch correctly when selectedValue is true 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
    }
  }
  testID="toggleSwitchTest"
>
  <Text
    style={
      [
        {
          "color": "#000000",
          "fontSize": 10,
          "textAlignVertical": "center",
        },
        {
          "color": "#000000",
          "fontFamily": "VoltePlay-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "marginRight": 5,
        },
        {
          "fontSize": 14,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <RCTSwitch
      accessibilityRole="switch"
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#F3CBE3"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          {
            "height": 20,
          },
        ]
      }
      thumbTintColor="#ffffff"
      tintColor="#C2C2C2"
      value={true}
    />
    <View
      style={
        [
          {
            "borderRadius": 50,
            "borderWidth": 0.5,
            "height": 20,
            "position": "absolute",
            "top": 0,
            "width": 20,
          },
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#E10092",
            "right": 0,
          },
        ]
      }
    />
  </View>
</View>
`;
